--- a/app/src/main/res/layout/activity_ex_extras.xml
+++ b/app/src/main/res/layout/activity_ex_extras.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editTextNumber"
+        android:id="@+id/editCodigo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -45,5 +45,5 @@
         android:text="Ir para outra atividade"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />
+        app:layout_constraintTop_toBottomOf="@+id/editCodigo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
