--- a/app/src/main/res/layout/activity_ex_resposta.xml
+++ b/app/src/main/res/layout/activity_ex_resposta.xml
@@ -29,6 +29,7 @@
         android:ems="10"
         android:hint="Nome do personagem"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonIr" />
@@ -43,6 +44,7 @@
         android:ems="10"
         android:hint="Alinhamento"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editNome" />
